=========
Changelog
=========

Here you can find the recent changes to kaptan

v0.5.12 (2019-04-22)
--------------------
- Bump pipenv version to python 3.x
- Utility package updates
- Bump pyyaml version to <6

v0.5.11 (2018-12-30)
--------------------
- Update dependencies for pytest, sphinx, etc.
- Forward compatiblity with Python 3.8 ``collections.abc``
- sphinx-argparse 0.2.2 to 0.2.5
- Sphinx 1.7.5 to 1.8.3
- sphinx-rtd-theme 0.4.0 to 0.4.2
- flake8 3.5.0 to 3.6.0
- pytest 3.6.2 to 4.0.2

v0.5.10 (2018-07-06)
--------------------
- Update Pipfile
- Relax pyyaml requirements to <4
- Support for Python 3.7
- Prevent test from creating stray .pyc files
- Update pytest 3.2.3 to 3.6.3
- Update sphinx 1.6.4 to 1.7.5
- Update sphinx-argparse 0.2.1 to 0.2.2
- Update sphinx-rtd-theme 0.2.4 to 0.4.0
- Add ``make sync_pipfile`` for updating Pipfile

v0.5.9 (2017-10-19)
-------------------

- Make yaml safe by default (https://github.com/emre/kaptan/pull/46) by
  @pradyunsg
- Add ``Pipfile`` for `pipenv`_
- Add ``.tmuxp.yaml`` for `tmuxp`_
- Add ``Makefile`` with tasks to re-run commands on file save, rebuild
  sphinx
- Update py.test, sphinx versions

.. _pipenv: https://github.com/kennethreitz/pipenv
.. _tmuxp: https://tmuxp.git-pull.com

.. # vim: set filetype=rst: